# mvp-finder

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: conftest.py  pyproject.toml  pytest.ini
backend/apps/posts/: admin.py  api.py  models.py
backend/apps/posts/management/commands/: seed_data.py
backend/apps/posts/migrations/: 0001_initial.py  0002_favorite.py  0003_change_target_audience_to_textfield.py  0004_rename_post_to_product.py  0005_update_product_meta.py  0006_add_product_note.py
backend/apps/scraper/: ai_analyzer.py  api.py  producthunt_client.py  reddit_client.py  scraper.py  tasks.py
backend/apps/scraper/tests/: test_ai_analyzer.py  test_api.py  test_scraper.py
backend/apps/subreddits/: admin.py  api.py  apps.py  models.py
backend/apps/topics/: admin.py  api.py  models.py
backend/apps/topics/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py
backend/apps/users/migrations/: 0001_initial.py  0002_remove_favorite.py
backend/config/: __init__.py  api.py  auth.py  celery.py  urls.py
backend/config/settings/: base.py  local.py  production.py
backend/tests/: README_TESTS.md  test_auth.py  test_posts.py  test_product_notes.py  test_products.py  test_subreddits.py  test_topics.py
docker/backend/: Dockerfile  Dockerfile.prod
docker/celery/: Dockerfile  Dockerfile.prod
docker/frontend/: Dockerfile  Dockerfile.prod  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+48 files in other folders)
