[project]
name = "mvp-finder"
version = "0.1.0"
description = "Aplicación web para agregar y organizar productos de Product Hunt"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "django==5.2",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.5.3",
    "djangorestframework-simplejwt>=5.5.1",
    "flower>=2.0.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.3.2",
    "python-dateutil>=2.9.0",
    "redis>=7.1.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.13",
]
